--- a/projects/projects_template.html
+++ b/projects/projects_template.html
@@ -20,14 +20,14 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/project1.jpg" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/project1.jpg" alt="project-image-main" class="project-image-main">
             </div>
             
             <div class="project-text-side">
                 <div class="project-description">
-                    <p>このプロジェクトの詳細説明がここに入ります。複数の段落で構成されており、プロジェクトの背景、目的、プロセス、成果などを詳細に記述します。このテキストは実際のプロジェクトに合わせて変更してください。</p>
-                    <p>二段落目の説明文がここに入ります。プロジェクトの特徴や重要なポイントについて述べることができます。</p>
-                    <p>三段落目の説明文です。プロジェクトの詳細情報や技術的な解説がここに入ります。例えば使用した材料、技術、手法などについて説明することができます。</p>
+                    <p>一段落目の説明文</p>
+                    <p>二段落目の説明文</p>
+                    <p>三段落目の説明文</p>
                 </div>
             </div>
         </div>
