--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     
     <div class="projects-grid" id="projects-grid">
-        <a href="projects/project1.html" class="project-card" data-tags="Event" data-date="20250425">
+        <a href="projects/project1.html" class="project-card" data-tags="Design" data-date="20250425">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/project1.jpg" alt="project1" class="project-image">
