ソートの位置を調整（途中）

--- a/projects/projects_template.html
+++ b/projects/projects_template.html
@@ -12,6 +12,10 @@
     <!-- ヘッダーをインクルード -->
     <div id="header-container"></div>
     
+    <div class="page-title">
+        <h2 class="title-text"></h2>
+    </div>
+
     <div class="project-content">
         <div class="project-header">
             <h1 class="project-title">project1</h1>
