--- a/projects/project1.html
+++ b/projects/project1.html
@@ -11,6 +11,10 @@
 <body>
     <!-- ヘッダーをインクルード -->
     <div id="header-container"></div>
+
+    <div class="page-title">
+        <h2 class="title-text"></h2>
+    </div>
     
     <div class="project-content">
         <div class="project-header">
