--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- ローディング画面（中央にサイト名を表示） -->
 <div id="loading">
-  <h1 class="site-name">Shiozaki Lablatory</h1>
+  <h1 class="site-name">SHIOZAKI LABORATORY</h1>
 </div>
     <!-- ヘッダーをインクルード -->
     <div id="header-container"></div>
