--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 <body>
     <!-- ローディング画面（中央にサイト名を表示） -->
 <div id="loading">
+  <div class="diagonal-lines">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
   <h1 class="site-name">SHIOZAKI LABORATORY</h1>
+</div>
+
 </div>
     <!-- ヘッダーをインクルード -->
     <div id="header-container"></div>
