色を全部白

--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
                 CIC-506, 3-3-6, Shibaura, Minato-ku, Tokyo, #108-0023
             </p>
             <p class="footer-lab">
-                東京科学大学（前・東京工業大学）塩崎太伸研究室
+                東京科学大学（旧・東京工業大学）塩崎太伸研究室
             </p>
             <div class="footer-links">
                 <!--
