プロジェクト追加(SUPERTIGHTCITY)

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project3.html" class="project-card" data-tags="Event" data-date="20250328">
+        <a href="projects/SUPERTIGHTCITY.html" class="project-card" data-tags="Research" data-date="201907">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project3.jpg" alt="project3" class="project-image">
+                    <img src="img/SUPERTIGHTCITY_1.png" alt="SUPERTIGHTCITY" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
