--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project4.html" class="project-card" data-tags="Thesis" data-date="20250312">
+        <a href="projects/空間へ,磯崎新.html" class="project-card" data-tags="Reading" data-date="202503">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project4.jpg" alt="project4" class="project-image">
+                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="250331_空間へ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
