空間へ修正

--- a/projects/空間へ,磯崎新.html
+++ b/projects/空間へ,磯崎新.html
@@ -29,7 +29,7 @@
             
             <div class="project-text-side">
                 <div class="project-description">
-                    <p>ああああ
+                    <p>ああああああ
                 </div>
             </div>
         </div>
