--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <a href="projects/空間へ,磯崎新.html" class="project-card" data-tags="Reading" data-date="202503">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="250331_空間へ" class="project-image">
+                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="空間へ,磯崎新" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project4</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">空間へ, 磯崎新</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
