--- a/projects/空間へ,磯崎新.html
+++ b/projects/空間へ,磯崎新.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/img/250331_空間へ, 磯崎新.JPG" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/250331_空間へ, 磯崎新.JPG" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
