機能から様相へ

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project5.html" class="project-card" data-tags="Research" data-date="20250227">
+        <a href="projects/機能から様相へ, 原広司.html" class="project-card" data-tags="Reading" data-date="202406">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project5.jpg" alt="project5" class="project-image">
+                    <img src="img/2406_機能から様相へ, 原広司.JPG" alt="project5" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
