--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project3</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">SUPERTIGHTCITY</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
@@ -102,7 +102,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project5</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">空間〈機能から様相へ〉, 原広司</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
