--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project6.html" class="project-card" data-tags="Publication" data-date="20250215">
+        <a href="projects/Liminal Space 中間報告会.html" class="project-card" data-tags="Publication" data-date="20250215">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project6.jpg" alt="project6" class="project-image">
+                    <img src="img/250110_Liminal Space中間報告会.jpg" alt="project6" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project6</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">Liminal Space中間報告会</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
