菊名駅前リサーチ

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <a href="projects/空間へ,磯崎新.html" class="project-card" data-tags="Reading" data-date="202503">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="空間へ,磯崎新" class="project-image">
+                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="空間へ/磯崎新" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">空間へ, 磯崎新</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">空間へ/磯崎新</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
@@ -97,18 +97,18 @@
         <a href="projects/機能から様相へ, 原広司.html" class="project-card" data-tags="Reading" data-date="202406">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/2406_機能から様相へ, 原広司.JPG" alt="project5" class="project-image">
+                    <img src="img/2406_機能から様相へ, 原広司.JPG" alt="空間〈機能から様相へ〉/原広司" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">空間〈機能から様相へ〉, 原広司</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">空間〈機能から様相へ〉/原広司</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/Liminal Space 中間報告会.html" class="project-card" data-tags="Publication" data-date="20250215">
+        <a href="projects/Liminal Space 中間報告会.html" class="project-card" data-tags="Research" data-date="20250215">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/250110_Liminal Space中間報告会.jpg" alt="project6" class="project-image">
@@ -122,15 +122,15 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project7.html" class="project-card" data-tags="Reading" data-date="20250130">
+        <a href="projects/菊名駅前リサーチ.html" class="project-card" data-tags="Research" data-date="20250130">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project7.jpg" alt="project7" class="project-image">
+                    <img src="img/2207_菊名駅前リサーチ.png" alt="菊名駅前リサーチ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project7</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">菊名駅前リサーチ</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
