--- a/projects/機能から様相へ, 原広司.html
+++ b/projects/機能から様相へ, 原広司.html
@@ -18,7 +18,7 @@
     
     <div class="project-content">
         <div class="project-header">
-            <h1 class="project-title">空間〈機能から様相へ〉, 原広司</h1>
+            <h1 class="project-title">空間〈機能から様相へ〉/原広司</h1>
             <div class="project-date">202406</div>
         </div>
         
