--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/菊名駅前リサーチ.html" class="project-card" data-tags="Research" data-date="20250130">
+        <a href="projects/菊名駅前リサーチ.html" class="project-card" data-tags="Research" data-date="202207">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/2207_菊名駅前リサーチ.png" alt="菊名駅前リサーチ" class="project-image">
