--- a/projects/Liminal Space 中間報告会.html
+++ b/projects/Liminal Space 中間報告会.html
@@ -29,7 +29,16 @@
             
             <div class="project-text-side">
                 <div class="project-description">
-                    <p>ああああああ
+                    <p>リミナルスペース（英・Lininal Space）とは、不気味な雰囲気を醸すシュールな廃的空間を指すインターネット美学の一種である（ikipedia より引用）
+塩崎研究室「Limiral space」研究部会では現在、リミナルスペースを調査・分析し、批評することで折たな建築空間の可能性を探っている。
+リミナルスペースは元来、移動のための空間を指す言葉であった。
+ホテルの部下や空港、ショッピングモールの内観など、そこから人がいなくなることで生じる想定されていた機能やコンテクストとのズレによる不穏な雰田気をもつイメージがインターネットを中心に拡散されている=それはかつてヴァルター・ベンヤミンがウジェーヌ・アジーの振った人のいないバリの写真にシュルレアリストの可能性を感じたこととも関係が認められるのかもしれない。
+塩崎研究室では、リミナルスペースのもつイメージを、既視感「teja-vu：デジャヴュ）と未視感（jamais mu： ジャメヴェ）という感覚の重なったものとして捉え、その建築デザインにおける可能性を模索する。
+建築を思考するうえでの空間性・時間性について、今までの設計論や建築論が見逃していたであろう感覚の次売を対象化し、思考する。
+既に研究部会では現実の都市空間である新宿駅を対象にフィールドワークを実施している。
+その巨大な地下空間のいくつかの場所で長時間露光撮影を行うことによって人の姿を消し、新宿駅のもつリミナルスペースとしての側面を炙り出すことに成功した。
+調査報告では我々の考えるリミナルスペースの位置づけと新宿のフィールドワークの成果を提示し、新たな津築空間とその表現のあり方を考える。
+
                 </div>
             </div>
         </div>
