--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/新宿駅地下リサーチ.html" class="project-card" data-tags="Event" data-date="20250115">
+        <a href="projects/新宿駅地下リサーチ.html" class="project-card" data-tags="Research" data-date="20250115">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/241025_新宿駅地下リサーチ.jpg" alt="新宿駅地下リサーチ" class="project-image">
@@ -144,7 +144,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">新宿駅地下リサーチ/span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">新宿駅地下リサーチ</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
