--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="projects/空間へ,磯崎新.html" class="project-card" data-tags="Reading" data-date="202503">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/250331_空間へ, 磯崎新.JPG" alt="空間へ/磯崎新" class="project-image">
+                    <img src="img/2503_空間へ, 磯崎新.webp" alt="空間へ/磯崎新" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
@@ -97,7 +97,7 @@
         <a href="projects/機能から様相へ, 原広司.html" class="project-card" data-tags="Reading" data-date="202406">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/2406_機能から様相へ, 原広司.JPG" alt="空間〈機能から様相へ〉/原広司" class="project-image">
+                    <img src="img/2406_機能から様相へ, 原広司.webp" alt="空間〈機能から様相へ〉/原広司" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
@@ -125,7 +125,7 @@
         <a href="projects/菊名駅前リサーチ.html" class="project-card" data-tags="Research" data-date="202207">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/2207_菊名駅前リサーチ.png" alt="菊名駅前リサーチ" class="project-image">
+                    <img src="img/2207_菊名駅前リサーチ.webp" alt="菊名駅前リサーチ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
