--- a/projects/機能から様相へ, 原広司.html
+++ b/projects/機能から様相へ, 原広司.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/2406_機能から様相へ, 原広司.JPG" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/2406_機能から様相へ, 原広司.webp" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
