--- a/projects/新宿駅地下リサーチ.html
+++ b/projects/新宿駅地下リサーチ.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/241025_新宿駅地下リサーチ.jpg" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/2207_菊名駅前リサーチ.webp" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
