--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a href="projects/Liminal Space 中間報告会.html" class="project-card" data-tags="Research" data-date="20250110">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/250110_Liminal Space中間報告会.jpg" alt="project6" class="project-image">
+                    <img src="img/250110_Liminal Space 中間報告会.webp" alt="project6" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
@@ -139,7 +139,7 @@
         <a href="projects/新宿駅地下リサーチ.html" class="project-card" data-tags="Research" data-date="20250115">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/241025_新宿駅地下リサーチ.jpg" alt="新宿駅地下リサーチ" class="project-image">
+                    <img src="img/241025_新宿駅地下リサーチ.webp" alt="新宿駅地下リサーチ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
