--- a/projects/新宿駅地下リサーチ.html
+++ b/projects/新宿駅地下リサーチ.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/250110_Liminal Space 中間報告会.webp" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/241025_新宿駅地下リサーチ.webp" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
