都市建築の力追加

--- a/index.html
+++ b/index.html
@@ -177,6 +177,21 @@
             </div>
             <div class="project-square"></div>
         </a>
+         
+        <a href="projects/都市建築の力.html" class="project-card" data-tags="Research" data-date="20241212">
+            <div class="fixed-image-square">
+                <div class="project-image-container">
+                    <img src="img/都市建築の力.jpg" alt="都市建築の力" class="project-image">
+                </div>
+            </div>
+            <div class="fixed-text-square">
+                <div class="project-info">
+                    <span class="project-title">project10</span><span class="project-separator"> / </span><span class="project-date"></span>
+                </div>
+            </div>
+            <div class="project-square"></div>
+        </a>
+    </div>
     </div>
 
     <div id="footer-container"></div>
