都市建築の力写真の追加

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="project-square"></div>
         </a>
          
-        <a href="projects/都市建築の力.html" class="project-card" data-tags="Research" data-date="20241212">
+        <a href="projects/都市建築の力.html" class="project-card" data-tags="Research" data-date="202002">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/都市建築の力.jpg" alt="都市建築の力" class="project-image">
