--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project10</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">都市建築の力</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
