上池袋の住宅追加

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
     
     <div class="projects-grid" id="projects-grid">
-        <a href="projects/project1.html" class="project-card" data-tags="Design" data-date="20250425">
+        <a href="projects/上池袋の住宅プロジェクト.html" class="project-card" data-tags="Design" data-date="202010">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project1.jpg" alt="project1" class="project-image">
+                    <img src="img/上池袋の住宅.webp" alt="上池袋の住宅プロジェクト" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
