--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project1</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">上池袋の住宅プロジェクト</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
