--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project2.html" class="project-card" data-tags="Publication" data-date="20250410">
+        <a href="projects/大塚・三業通りの住宅プロジェクト.html" class="project-card" data-tags="Design" data-date="201703">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project2.jpg" alt="project2" class="project-image">
+                    <img src="img/大塚・三業通りの住宅プロジェクト.webp" alt="大塚・三業通りの住宅プロジェクト" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project2</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">大塚・三業通りの住宅プロジェクト</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
