大塚、画像修正

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a href="projects/大塚・三業通りの住宅プロジェクト.html" class="project-card" data-tags="Design" data-date="201703">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/大塚・三業通りの住宅プロジェクト.webp" alt="大塚・三業通りの住宅プロジェクト" class="project-image">
+                    <img src="img/大塚・三業通りの住宅.jpg" alt="大塚・三業通りの住宅プロジェクト" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
