--- a/projects/大塚・三業通りの住宅プロジェクト.html
+++ b/projects/大塚・三業通りの住宅プロジェクト.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/大塚・三業通りの住宅プロジェクト.webp" alt="プロジェクトメイン画像" class="project-image-main">
+                <img src="../img/大塚・三業通りの住宅.jpg" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
