アーバンフロッタージュ追加

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">上池袋の住宅プロジェクト</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">上家袋の住宅</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
@@ -55,12 +55,12 @@
         <a href="projects/大塚・三業通りの住宅プロジェクト.html" class="project-card" data-tags="Design" data-date="201703">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/大塚・三業通りの住宅.jpg" alt="大塚・三業通りの住宅プロジェクト" class="project-image">
+                    <img src="img/大塚・三業通りの住宅.jpg" alt="大塚・三業通りの住宅" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">大塚・三業通りの住宅プロジェクト</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">大塚・三業通りの住宅</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
@@ -150,15 +150,15 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/project9.html" class="project-card" data-tags="Thesis" data-date="20241228">
+        <a href="projects/アーバンフロッタージュ.html" class="project-card" data-tags="Thesis" data-date="201708">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/project9.jpg" alt="project9" class="project-image">
+                    <img src="img/フロッタージュ.webp" alt="アーバンフロッタージュ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
                 <div class="project-info">
-                    <span class="project-title">project9</span><span class="project-separator"> / </span><span class="project-date"></span>
+                    <span class="project-title">アーバンフロッタージュ</span><span class="project-separator"> / </span><span class="project-date"></span>
                 </div>
             </div>
             <div class="project-square"></div>
