--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a href="projects/アーバンフロッタージュ.html" class="project-card" data-tags="Thesis" data-date="201708">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/フロッタージュ.webp" alt="アーバンフロッタージュ" class="project-image">
+                    <img src="img/アーバンフロッタージュ.webp" alt="アーバンフロッタージュ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
