修正アーバンフロ

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="project-square"></div>
         </a>
         
-        <a href="projects/アーバンフロッタージュ.html" class="project-card" data-tags="Thesis" data-date="201708">
+        <a href="projects/アーバンフロッタージュ.html" class="project-card" data-tags="Event" data-date="201807">
             <div class="fixed-image-square">
                 <div class="project-image-container">
                     <img src="img/アーバンフロッタージュ.webp" alt="アーバンフロッタージュ" class="project-image">
