--- a/projects/アーバンフロッタージュ.html
+++ b/projects/アーバンフロッタージュ.html
@@ -24,7 +24,7 @@
         
         <div class="project-main-content">
             <div class="project-image-side">
-                <img src="../img/フロッタージュ.webp" alt="project-image-main" class="project-image-main">
+                <img src="../img/フロッタージュ.webp" alt="プロジェクトメイン画像" class="project-image-main">
             </div>
             
             <div class="project-text-side">
