画像名変更

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <a href="projects/アーバンフロッタージュ.html" class="project-card" data-tags="Event" data-date="201807">
             <div class="fixed-image-square">
                 <div class="project-image-container">
-                    <img src="img/アーバンフロッタージュ.webp" alt="アーバンフロッタージュ" class="project-image">
+                    <img src="img/urbanfrottage.webp" alt="アーバンフロッタージュ" class="project-image">
                 </div>
             </div>
             <div class="fixed-text-square">
